load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "apiserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/wisechengyi/scoot/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/cluster",
        "//cloud/cluster/local",
        "//common",
        "//common/endpoints",
        "//common/log/hooks",
        "//common/stats",
        "//config/jsonconfig",
        "//snapshot/bundlestore",
        "//snapshot/git/gitdb",
        "//snapshot/snapshots",
        "//snapshot/store",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":apiserver_lib"],
    visibility = ["//visibility:public"],
)
