load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "setup-cloud-scoot_lib",
    srcs = ["main.go"],
    importpath = "github.com/wisechengyi/scoot/setup-cloud-scoot",
    visibility = ["//visibility:private"],
    deps = [
        "//common/log/hooks",
        "//scheduler/setup",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "main",
    embed = [":setup-cloud-scoot_lib"],
    visibility = ["//visibility:public"],
)
