load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "scoot-snapshot-db_lib",
    srcs = ["main.go"],
    importpath = "github.com/wisechengyi/scoot/binaries/scoot-snapshot-db",
    visibility = ["//visibility:private"],
    deps = [
        "//common/dialer",
        "//common/log/hooks",
        "//common/stats",
        "//scheduler/client",
        "//snapshot",
        "//snapshot/cli",
        "//snapshot/git/gitdb",
        "//snapshot/git/repo",
        "//snapshot/store",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "scoot-snapshot-db",
    embed = [":scoot-snapshot-db_lib"],
    visibility = ["//visibility:public"],
)
