load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dirconfig",
    srcs = [
        "dir_config.go",
        "entire_dir_config.go",
        "last_modified_dir_config.go",
    ],
    importpath = "github.com/wisechengyi/scoot/cleaner/dirconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//common/stats",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "dirconfig_test",
    srcs = ["entire_dir_config_test.go"],
    embed = [":dirconfig"],
    deps = ["@com_github_stretchr_testify//assert"],
)
