load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cluster",
    srcs = [
        "cluster.go",
        "fetch_cron.go",
        "node.go",
        "state.go",
    ],
    importpath = "github.com/wisechengyi/scoot/cloud/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//common/stats",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "cluster_test",
    srcs = [
        "cluster_test.go",
        "fetch_cron_test.go",
    ],
    embed = [":cluster"],
    deps = [
        "//common",
        "//common/log/hooks",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stretchr_testify//assert",
    ],
)
