load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "allocator",
    srcs = ["allocator.go"],
    importpath = "github.com/wisechengyi/scoot/common/allocator",
    visibility = ["//visibility:public"],
)

go_test(
    name = "allocator_test",
    srcs = ["allocator_test.go"],
    embed = [":allocator"],
)
