load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/wisechengyi/scoot/common/client",
    visibility = ["//visibility:public"],
    deps = [
        "//common/dialer",
        "//scheduler/client",
        "@com_github_spf13_cobra//:cobra",
    ],
)
