load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stats",
    srcs = [
        "dir_monitor.go",
        "stats.go",
        "stats_names.go",
        "stats_time.go",
        "verify_stats.go",
    ],
    importpath = "github.com/twitter/scoot/common/stats",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rcrowley_go_metrics//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "stats_test",
    srcs = ["stats_test.go"],
    embed = [":stats"],
)
