load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jsonconfig",
    srcs = [
        "config.go",
        "doc.go",
    ],
    importpath = "github.com/twitter/scoot/config/jsonconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//ice",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "jsonconfig_test",
    srcs = ["config_test.go"],
    embed = [":jsonconfig"],
    deps = ["//ice"],
)
