load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "recoverytest_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/integration-tests/recoverytest",
    visibility = ["//visibility:private"],
    deps = [
        "//common/log/hooks",
        "//scheduler",
        "//tests/testhelpers",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "recoverytest",
    embed = [":recoverytest_lib"],
    visibility = ["//visibility:public"],
)
