load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "smoketest",
    srcs = ["smoketest.go"],
    importpath = "github.com/twitter/scoot/integration-tests/smoketest",
    visibility = ["//visibility:public"],
    deps = [
        "//common/client",
        "//scheduler/api/thrift/gen-go/scoot",
        "//tests/testhelpers",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
