load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "smoketest",
    srcs = ["smoketest.go"],
    importpath = "github.com/wisechengyi/scoot/integration-tests/smoketest",
    visibility = ["//visibility:public"],
    deps = [
        "//common/client",
        "//scheduler/api/thrift/gen-go/scoot",
        "//tests/testhelpers",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
