load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "locate.go",
    ],
    importpath = "github.com/wisechengyi/scoot/scheduler/client",
    visibility = ["//visibility:public"],
    deps = [
        "//common/dialer",
        "//scheduler/api/thrift/gen-go/scoot",
    ],
)
